<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>webswing</artifactId>
		<groupId>org.webswing</groupId>
		<version>20.2.5</version>
		<relativePath>..</relativePath>
	</parent>
	<artifactId>webswing-directdraw</artifactId>
	<packaging>pom</packaging>
	<modules>
		<module>webswing-directdraw-swing</module>
		<module>webswing-directdraw-javascript</module>
	</modules>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerArgs>
						<arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.awt.dnd=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.awt.dnd.peer=ALL-UNNAMED</arg>
						<arg>--add-exports=java.base/sun.nio.cs=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.java2d.loops=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/java.awt.dnd=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.print=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.print=ALL-UNNAMED</arg>
						<arg>--add-exports=java.base/sun.security.util=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>